0.1-alpha2/_sources/population/CMS.rst.txt
Cameroon *An. gambiae*
======================



The tables below list signals of recent selection discovered in the
Cameroon *An. gambiae* population.



Chromosome arm 2R
-----------------



.. raw:: html
    :file: CMS.2R.signals.html

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/CMS/2/1/index`, "2R:28,400,001-28,440,000", 910 (469 | 441)
    :doc:`../signal/H12/CMS/2/3/index`, "2R:40,600,001-40,980,000", 269 (195 | 74)
    




Chromosome arm 2L
-----------------



.. raw:: html
    :file: CMS.2L.signals.html

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/CMS/2/2/index`, "2L:2,420,001-2,920,000", 566 (461 | 104)
    




Chromosome arm 3R
-----------------



.. raw:: html
    :file: CMS.3R.signals.html

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/CMS/3/1/index`, "3R:28,540,001-28,640,000", 1109 (680 | 428)
    




Chromosome arm 3L
-----------------



.. raw:: html
    :file: CMS.3L.signals.html

.. cssclass:: table-hover
.. csv-table::
    :widths: auto
    :header: Signal,Focus,Score (Left | Right)

    :doc:`../signal/H12/CMS/3/2/index`, "3L:26,880,001-26,940,000", 294 (265 | 29)
    




Chromosome X
------------



No signals.



Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/population/CMS';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


