0.1-alpha3/_sources/population/CMS.rst.txt
Cameroon *An. gambiae*
======================



The tables below list signals of recent selection discovered in the
Cameroon *An. gambiae* population.



Chromosome arm 2R
-----------------



.. raw:: html
    :file: CMS.2R.signals.html

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/IHS/CMS/2/1/index`
      - IHS
      - Cameroon *An. gambiae*
      - 2R:28,240,000-28,560,000
      - 1,249
      - 100.0%
      - Cyp6p
    * - :doc:`../signal/H12/CMS/2/1/index`
      - H12
      - Cameroon *An. gambiae*
      - 2R:28,460,000-28,560,000
      - 1,124
      - 100.0%
      - Cyp6p
    * - :doc:`../signal/XPEHH/CMS.UGS/2/1/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2R:41,020,000-41,400,000
      - 943
      - 99.7%
      - 
    * - :doc:`../signal/IHS/CMS/2/2/index`
      - IHS
      - Cameroon *An. gambiae*
      - 2R:40,060,000-40,780,000
      - 643
      - 100.0%
      - 
    * - :doc:`../signal/XPEHH/CMS.GWA/2/2/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2R:28,420,000-28,620,000
      - 578
      - 98.7%
      - Cyp6p
    * - :doc:`../signal/H12/CMS/2/3/index`
      - H12
      - Cameroon *An. gambiae*
      - 2R:40,300,000-40,740,000
      - 501
      - 98.7%
      - 
    * - :doc:`../signal/IHS/CMS/2/4/index`
      - IHS
      - Cameroon *An. gambiae*
      - 2R:19,100,000-19,180,000
      - 339
      - 84.4%
      - 
    * - :doc:`../signal/XPEHH/CMS.GAS/2/2/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2R:41,220,000-41,320,000
      - 236
      - 99.9%
      - 
    * - :doc:`../signal/XPEHH/CMS.GAS/2/3/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2R:28,560,000-28,800,000
      - 191
      - 100.0%
      - 
    * - :doc:`../signal/XPEHH/CMS.GAS/2/4/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2R:15,980,000-16,140,000
      - 119
      - 99.4%
      - 
    * - :doc:`../signal/XPEHH/CMS.GWA/2/3/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2R:40,680,000-40,760,000
      - 100
      - 96.5%
      - 
    





Chromosome arm 2L
-----------------



.. raw:: html
    :file: CMS.2L.signals.html

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/XPEHH/CMS.GWA/2/1/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2L:3,474,895-3,814,895
      - 760
      - 99.6%
      - 
    * - :doc:`../signal/H12/CMS/2/2/index`
      - H12
      - Cameroon *An. gambiae*
      - 2L:3,054,895-3,614,895
      - 725
      - 99.7%
      - 
    * - :doc:`../signal/IHS/CMS/2/3/index`
      - IHS
      - Cameroon *An. gambiae*
      - 2L:34,254,895-34,674,895
      - 586
      - 97.7%
      - 
    * - :doc:`../signal/XPEHH/CMS.UGS/2/2/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2L:25,414,895-25,454,895
      - 291
      - 90.3%
      - Rdl
    * - :doc:`../signal/XPEHH/CMS.GAS/2/1/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 2L:45,374,895-45,454,895
      - 250
      - 98.6%
      - 
    * - :doc:`../signal/IHS/CMS/2/5/index`
      - IHS
      - Cameroon *An. gambiae*
      - 2L:39,274,895-39,314,895
      - 137
      - 95.6%
      - 
    * - :doc:`../signal/H12/CMS/2/4/index`
      - H12
      - Cameroon *An. gambiae*
      - 2L:39,274,895-39,314,895
      - 112
      - 98.7%
      - 
    * - :doc:`../signal/IHS/CMS/2/7/index`
      - IHS
      - Cameroon *An. gambiae*
      - 2L:46,054,895-46,094,895
      - 98
      - 77.4%
      - 
    * - :doc:`../signal/IHS/CMS/2/6/index`
      - IHS
      - Cameroon *An. gambiae*
      - 2L:42,394,895-42,434,895
      - 90
      - 77.8%
      - 
    





Chromosome arm 3R
-----------------



.. raw:: html
    :file: CMS.3R.signals.html

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/CMS/3/1/index`
      - H12
      - Cameroon *An. gambiae*
      - 3R:28,580,000-28,620,000
      - 1,410
      - 100.0%
      - Gste
    * - :doc:`../signal/XPEHH/CMS.GWA/3/1/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 3R:28,600,000-28,700,000
      - 1,275
      - 100.0%
      - Gste
    * - :doc:`../signal/XPEHH/CMS.UGS/3/1/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 3R:28,240,000-28,380,000
      - 1,234
      - 100.0%
      - 
    * - :doc:`../signal/IHS/CMS/3/1/index`
      - IHS
      - Cameroon *An. gambiae*
      - 3R:28,320,000-28,700,000
      - 1,106
      - 100.0%
      - Gste
    * - :doc:`../signal/XPEHH/CMS.GAS/3/1/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 3R:43,920,000-44,560,000
      - 538
      - 99.5%
      - 
    * - :doc:`../signal/XPEHH/CMS.GAS/3/2/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 3R:28,260,000-28,320,000
      - 232
      - 100.0%
      - 
    * - :doc:`../signal/IHS/CMS/3/2/index`
      - IHS
      - Cameroon *An. gambiae*
      - 3R:42,500,000-42,660,000
      - 191
      - 91.1%
      - 
    * - :doc:`../signal/XPEHH/CMS.GAS/3/3/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 3R:4,300,000-4,380,000
      - 127
      - 93.6%
      - 
    





Chromosome arm 3L
-----------------



.. raw:: html
    :file: CMS.3L.signals.html

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/H12/CMS/3/2/index`
      - H12
      - Cameroon *An. gambiae*
      - 3L:26,879,316-26,919,316
      - 328
      - 89.2%
      - 
    * - :doc:`../signal/XPEHH/CMS.UGS/3/2/index`
      - XPEHH
      - Cameroon *An. gambiae*
      - 3L:26,939,316-26,979,316
      - 252
      - 99.8%
      - 
    * - :doc:`../signal/IHS/CMS/3/3/index`
      - IHS
      - Cameroon *An. gambiae*
      - 3L:26,919,316-26,959,316
      - 186
      - 93.0%
      - 
    





Chromosome X
------------



.. raw:: html
    :file: CMS.X.signals.html

.. cssclass:: table-hover
.. list-table::
    :widths: auto
    :header-rows: 1

    * - Signal
      - Statistic
      - Population
      - Focus
      - Peak model :math:`\Delta_{i}`
      - Max. percentile
      - Known locus
    * - :doc:`../signal/IHS/CMS/X/1/index`
      - IHS
      - Cameroon *An. gambiae*
      - X:15,520,000-15,560,000
      - 162
      - 96.6%
      - 
    





Comments
--------


.. raw:: html

    <div id="disqus_thread"></div>
    <script>
    
    var disqus_config = function () {
        this.page.identifier = '/population/CMS';
    };
    
    (function() { // DON'T EDIT BELOW THIS LINE
    var d = document, s = d.createElement('script');
    s.src = 'https://agam-selection-atlas.disqus.com/embed.js';
    s.setAttribute('data-timestamp', +new Date());
    (d.head || d.body).appendChild(s);
    })();
    </script>
    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments.</a></noscript>


